k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tms-app
spec:
  selector:
    app: tms-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
